# Project2

./: AStar.h  BFS.h  BestFirstSearch.h  CMakeLists.txt  ClientHandler.h  Comparator.h  DFS.h  GraphSearcher.h  GraphSolution.h  HeapCompare.h  Matrix.cpp  Matrix.h  MatrixSolution.h  MyClientHandler.cpp  MyClientHandler.h  MyPriorityQueue.h  MySolver.h  Problem.h  SearchableGraph.h  SearchableMatrixs.h  Solution.h  Solver.h  State.h  StateMap.h  StateType.h  StringProblem&Solution.h  StringReverser.h  details.txt  graphs.txt  log.txt  main.cpp
cache_manager/: CacheManager.h  FileCacheManager.cpp  FileCacheManager.h
comp/: solution.txt
server_side/: ClientHandler.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  Server.h
